--- a/PCapture/src/index.css
+++ b/PCapture/src/index.css
@@ -1,6 +1,11 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
   margin: auto;
-  max-width: 38rem;
-  padding: 2rem;
+  padding: 0;
+  text-align: center;
+}
+
+video{
+  width: 100%;
+  height: auto;
 }
